# Algo_data_science

./: 1_Practical_skills_1_2_ETL.ipynb  2_Practical_skills_1_2_interpolation_extrapolation.ipynb  3_Practical_skills_1_2_imodel_evaluation.ipynb  4_Practical_skills_1_2_linear_regression.ipynb  5_Practical_skills_1_2_memory.ipynb  6_Practical_skills_1_2_EDA.ipynb  7_Practical_skills_1_2_filling_in_data_gaps.ipynb  pyproject.toml  Копия_блокнота_"Hw9_1_ipynb".ipynb
