[tool.poetry]
name = "algo-data-science"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_data_science"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
